# nit-rs

./: Cargo.toml  README.md  nit.toml  otherthings.md
src/: configure.rs  main.rs  nitc.rs
