[package]
name = "nit-rs"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://limey.me/nit-rs"
description = "Nit, a lightweight and blazing fast version control system made in Rust (WIP)"
documentation = "https://docs.rs/nit-rs"
readme = "README.md"
repository = "https://github.com/limeyteam/nit-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
colored = "2.0.0"